# localrag

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/localrag/: __init__.py  cli.py  core.py  mcp_server.py
tests/: test_localrag.py
